# manga_tracker

./: .dockerignore  .env.example  .gitignore  Dockerfile  README.md  alembic.ini  docker-compose.yml  docker-entrypoint.sh  pyproject.toml  requirements.txt
.github/instructions/: repo-context.md
.github/prompts/: pr-review.md
.github/workflows/: ci.yml  claude.yml
alembic/: env.py  script.py.mako
alembic/versions/: 0001_initial_schema.py  0002_community_review_digest.py
app/: main.py
app/api/: deps.py  router.py
app/api/routes/: ai.py  auth.py  library.py  manga.py  reviews.py  sync.py
app/core/: cache.py  config.py  logging.py  security.py
app/db/: base.py  session.py
app/models/: __init__.py  activity.py  library.py  mal_account.py  manga.py  review.py  taste_profile.py  user.py
app/schemas/: auth.py  common.py  habits.py  library.py  manga.py  recommendation.py  review.py  roast.py  search.py  sync.py  taste_profile.py  user.py
app/services/: factory.py
app/services/ai/: community_reviews.py  context.py  habit_analysis.py  manga_index.py  recommendations.py  roast.py  search.py  taste_profile.py
app/services/jikan/: client.py  exceptions.py
app/services/llm/: base.py  exceptions.py  factory.py  gemini_provider.py
app/services/mal/: client.py  exceptions.py  sync.py
scripts/: mal_auth.py
