[project]
name = "manga-api"
version = "0.1.0"
description = "Manga tracking backend with MAL sync, taste profiles, and Gemini-powered recommendations/search"
requires-python = ">=3.11"
dependencies = [
    "fastapi>=0.115",
    "uvicorn[standard]>=0.32",
    "pydantic[email]>=2.9",
    "pydantic-settings>=2.6",
    "sqlalchemy[asyncio]>=2.0.36",
    "alembic>=1.14",
    "asyncpg>=0.30",
    "pgvector>=0.3.6",
    "redis>=5.2",
    "httpx>=0.28",
    "google-genai>=1.51",
    "python-jose[cryptography]>=3.3",
    "passlib[bcrypt]>=1.7.4",
    "python-multipart>=0.0.18",
    "structlog>=24.4",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.3",
    "pytest-asyncio>=0.24",
    "ruff>=0.8",
    "mypy>=1.13",
    "types-python-jose>=3.3",
    "types-passlib>=1.7",
]

[tool.ruff]
line-length = 100
target-version = "py311"

[tool.mypy]
python_version = "3.11"
plugins = ["pydantic.mypy"]

# pgvector ships no inline types and no `types-pgvector` stub package exists;
# the SQLAlchemy `Vector` column type is only ever used as a column-type
# argument, never inspected, so untyped is fine here.
[[tool.mypy.overrides]]
module = ["pgvector.*"]
ignore_missing_imports = true

[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[tool.setuptools.packages.find]
include = ["app*"]
